feat: Authentication, SaaS Multi-tenant logic, and Gemini AI integration completed