@@ -1,5 +1,7 @@
 package com.nexacrm.api.config;
 
+import com.nexacrm.api.security.JwtAuthenticationFilter; // Filtri import et
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -11,6 +13,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter; // Lazımdır
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -20,7 +23,10 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor // JwtAuthenticationFilter-i constructor ilə daxil etmək üçün
 public class SecurityConfig {
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter; // Bura əlavə etdik
 
     @Bean
     PasswordEncoder passwordEncoder() {
@@ -35,35 +41,34 @@ public class SecurityConfig {
     @Bean
     SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // 1. CSRF-i söndürürük (Çünki biz REST API yazırıq)
+            // 1. CSRF-i söndür (REST API üçün mütləqdir)
             .csrf(AbstractHttpConfigurer::disable)
             
-            // 2. CORS ayarlarını aşağıdakı metoddan oxuyur
+            // 2. CORS ayarlarını metoddan götür
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             
-            // 3. JWT istifadə etdiyimiz üçün Session saxlamırıq (Stateless)
+            // 3. JWT olduğu üçün sessiyanı STATELESS et
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             
-            // 4. API icazələri
+            // 4. İcazə qaydaları
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/v1/auth/**").permitAll() // Login/Register hamıya açıqdır
-                .requestMatchers("/api/v1/dashboard/**").permitAll() // TEST ÜÇÜN hələlik açıq qoyaq, sonra bağlayarıq
-                .requestMatchers("/api/v1/customers/**").permitAll() // TEST ÜÇÜN
-                .requestMatchers("/api/v1/leads/**").permitAll()     // TEST ÜÇÜN
-                .anyRequest().authenticated() // Qalan hər şey üçün Token lazım olacaq
+                .requestMatchers("/api/v1/auth/**").permitAll() // Login/Register tam açıq
+                .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll() // CORS pre-flight üçün
+                .anyRequest().authenticated() // Qalan hər şey üçün TOKEN mütləqdir
             );
+
+        // JWT filtrini əlavə et
+        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // CORS Ayarları: Brauzerin Front-end-dən gələn sorğulara icazə verməsi üçün
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // React portu
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "x-auth-token"));
-        configuration.setExposedHeaders(List.of("x-auth-token"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
         configuration.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
